--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 
   <!-- kotak kado -->
   <div id="kotak" class="box" onclick="buka()">
-    <span> Buka aja dulu</span>
+    <span> Buka aja dulu😘</span>
   </div>
 
   <!-- isi kado -->
@@ -116,9 +116,9 @@
 
   <script>
     const quotes = [
-      "sleep well kakaa!",
+      "sleep well kakaa😘!",
       "Jomblo kok begadang.",
-      "Istirahat yang cukup, walaupun gda ayang, masih ada web ini."
+      "Istirahat yang cukup, walaupun gda ayang, masih ada roh halus di sekitarmu ."
     ];
 
     function buka(){
